// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component Should render card-header 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="card-header"
    >
      <div
        class="card-header-title"
      >
        Title
      </div>
      <div
        class="card-header-icon"
      >
        <i
          class="icon"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card component should render 1`] = `
<DocumentFragment>
  <div
    class="card"
  />
</DocumentFragment>
`;

exports[`Card component should render 2`] = `
<DocumentFragment>
  <div
    class="card-content"
  />
</DocumentFragment>
`;

exports[`Card component should render 3`] = `
<DocumentFragment>
  <div
    class="card-footer"
  />
</DocumentFragment>
`;

exports[`Card component should render 4`] = `
<DocumentFragment>
  <div
    class="card-header"
  />
</DocumentFragment>
`;

exports[`Card component should render card-footer 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="card-footer"
    >
      <div
        class="card-footer-item"
      >
        Yes
      </div>
      <div
        class="card-footer-item"
      >
        No
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card component should render card-image 1`] = `
<DocumentFragment>
  <div
    class="card-image"
  >
    <figure
      class="image is-4by3"
    >
      <img
        alt=""
        class=""
        data-testid="image-img"
        src="http://bulma.io/images/placeholders/1280x960.png"
      />
    </figure>
  </div>
</DocumentFragment>
`;
